creating the UI folder

--- a/UI/index.html
+++ b/UI/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    hello lukman
+    Welcome to my Bit by Dream.i Page - BALOGUN Lukman Olatunji
 </body>
 </html>
