UI design for the login page

--- a/UI/login/login.html
+++ b/UI/login/login.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <!-- <link rel="stylesheet" href="../landing/landing.css"> -->
-    <link rel="stylesheet" href="signUp.css">
+    <link rel="stylesheet" href="../signUp/signUp.css">
+    <link rel="stylesheet" href="login.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 <body>
@@ -35,19 +36,17 @@
                         </div>
                     </div>
                     <div class="form-field">
-                        <h2> Sign Up </h2>
-                        <form action="/signUp" method="post">
-                            <input type="text" placeholder="Full Name" name="full-name">
+                        <h2> Login </h2>
+                        <form action="/login" method="post">
                             <input type="email" placeholder="Email" name="email">
                             <input type="password" placeholder="Password" name="password">
-                            <input type="password" placeholder="Re-confirm password" name="password">
                             <input type="submit" value="submit" class="submit">
                         </form>
                         <div class="signIn-link">
                             <span>
-                                Already Have an Account?
+                                Don't have an accout?
                             </span>
-                                <a href="../login/login.html">Login</a>
+                                <a href="../signUp/signUp.html">Sign up</a>
                         </div>
                     </div>
                 </div>
