admin page template

--- a/UI/admin/admin.html
+++ b/UI/admin/admin.html
@@ -27,53 +27,89 @@
                         <img src="../public/image/logo/admin.jpg" alt="">
                     </div>
                     <div class="admin-descript">
-                        <h2> Name here... </h2>
-                        <div class="social-info">
-                            <i class="far fa-envelope"></i>
-                            <i class="fab fa-instagram"></i>
-                            <i class="fas fa-phone"></i>
-                        </div>
+                        <h2> Balogun L.</h2>
+                        <span>Managing Director</span>
                     </div>
                 </div>
                 <div class="side-category">
                     <div class="category">
-                        <h2>Dashboard</h2>
-                        <h2>Account</h2>
+                        <div class="side-select selected-side-icon">
+                            <div>
+                                <i class="fas fa-landmark sidebar-icon"></i>
+                                <h2>Dashboard</h2>
+                            </div>
+                            <i class="fas fa-angle-down"></i>
+                        </div>
+                        <div class="side-select">
+                            <div>
+                                <i class="fab fa-battle-net sidebar-icon"></i>
+                                <h2>Widget</h2>
+                            </div>
+                            <i class="fas fa-angle-down"></i>
+                        </div>
+                        <div class="side-select">
+                            <div>
+                                <i class="fas fa-chart-area sidebar-icon"></i>
+                                <h2>Advanced UI</h2>
+                            </div>
+                            <i class="fas fa-angle-down"></i>
+                        </div>
+                        <div class="side-select">
+                            <div>
+                                <i class="fas fa-network-wired sidebar-icon"></i>
+                                <h2>Network</h2>
+                            </div>
+                            <i class="fas fa-angle-down"></i>
+                        </div>
+                        <div class="side-select">
+                            <div>
+                                <i class="fas fa-comments sidebar-icon"></i>
+                                <h2>Chart</h2>
+                            </div>
+                            <i class="fas fa-angle-down"></i>
+                        </div>
+                        <div class="side-select">
+                            <div>
+                                <i class="fas fa-route sidebar-icon"></i>
+                                <h2>PopUp</h2>
+                            </div>
+                            <i class="fas fa-angle-down"></i>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="right-section">
                 <div class="top-view">
-                    <div class="cat-view">
+                    <div class="cat-view green">
                         <div class="icon-div">
-                            <i class="fas fa-phone"></i>
+                            <i class="fas fa-atom"></i>
                         </div>
                         <div class="disc-div">
                             <h2> All Products </h2>
                             <span>20000</span>
                         </div>
                     </div>
-                    <div class="cat-view">
+                    <div class="cat-view orange">
                         <div class="icon-div">
-                            <i class="fas fa-shopping-cart"></i>
+                            <i class="fas fa-truck"></i>
                         </div>
                         <div class="disc-div">
                             <h2> Solds </h2>
                             <span>20000</span>
                         </div>
                     </div>
-                    <div class="cat-view">
+                    <div class="cat-view blue">
                         <div class="icon-div">
-                            <i class="fas fa-bars"></i>
+                            <i class="fas fa-cart-arrow-down"></i>
                         </div>
                         <div class="disc-div">
                             <h2> Ordered </h2>
                             <span>20000</span>
                         </div>
                     </div>
-                    <div class="cat-view">
+                    <div class="cat-view red">
                         <div class="icon-div">
-                            <i class="fas fa-phone"></i>
+                            <i class="fas fa-eraser"></i>
                         </div>
                         <div class="disc-div">
                             <h2> Finished Proucts</h2>
@@ -92,7 +128,134 @@
                         <button> Add New Product</button>
                     </div>
                     <div class="products-display">
-                        product here....
+                        <div class="products">
+                            <div class="item-div">
+                                <div class="image-div">
+                                    <img src="../public/image/admin/lady9.jpg" alt="image here">
+                                </div>
+                                <div class="discrip">
+                                    <h2>Ladies Bags</h2>
+                                    <div class="priceItemNo">
+                                        <span class="price">
+                                            ₦12000
+                                        </span>
+                                        <span class="grey">
+                                            ju1239ij
+                                        </span>
+                                    </div>
+                                    <div class="more">
+                                        more
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item-div">
+                                <div class="image-div">
+                                    <img src="../public/image/admin/lady10.jpg" alt="image here">
+                                </div>
+                                <div class="discrip">
+                                    <h2>Ladies Bags</h2>
+                                    <div class="priceItemNo">
+                                        <span class="price">
+                                            ₦12000
+                                        </span>
+                                        <span class="grey">
+                                            ju1239ij
+                                        </span>
+                                    </div>
+                                    <div class="more">
+                                        more
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item-div">
+                                <div class="image-div">
+                                    <img src="../public/image/admin/lady4.jpg" alt="image here">
+                                </div>
+                                <div class="discrip">
+                                    <h2>Ladies Bags</h2>
+                                    <div class="priceItemNo">
+                                        <span class="price">
+                                            ₦12000
+                                        </span>
+                                        <span class="grey">
+                                            ju1239ij
+                                        </span>
+                                    </div>
+                                    <div class="more">
+                                        more
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item-div">
+                                <div class="image-div">
+                                    <img src="../public/image/admin/lady3.jpg" alt="image here">
+                                </div>
+                                <div class="discrip">
+                                    <h2>Ladies Bags</h2>
+                                    <div class="priceItemNo">
+                                        <span class="price">
+                                            ₦12000
+                                        </span>
+                                        <span class="grey">
+                                            ju1239ij
+                                        </span>
+                                    </div>
+                                    <div class="more">
+                                        more
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item-div">
+                                <div class="image-div">
+                                    <img src="../public/image/admin/lady1.jpg" alt="image here">
+                                </div>
+                                <div class="discrip">
+                                    <h2>Ladies Bags</h2>
+                                    <div class="priceItemNo">
+                                        <span class="price">
+                                            ₦12000
+                                        </span>
+                                        <span class="grey">
+                                            ju1239ij
+                                        </span>
+                                    </div>
+                                    <div class="more">
+                                        more
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item-div">
+                                <div class="image-div">
+                                    <img src="../public/image/admin/lady11.jpg" alt="image here">
+                                </div>
+                                <div class="discrip">
+                                    <h2>Ladies Bags</h2>
+                                    <div class="priceItemNo">
+                                        <span class="price">
+                                            ₦12000
+                                        </span>
+                                        <span class="grey">
+                                            ju1239ij
+                                        </span>
+                                    </div>
+                                    <div class="more ">
+                                        more
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="footer-div">
+                        <div class="pagination">
+                            <a href="#">&laquo;</a>
+                            <a href="#">1</a>
+                            <a href="#">2</a>
+                            <a href="#">3</a>
+                            <a href="#">4</a>
+                            <a href="#">5</a>
+                            <a href="#">6</a>
+                            <a href="#">&raquo;</a>
+                        </div>
                     </div>
                 </div>
             </div>
