--- a/UI/landing/landing.html
+++ b/UI/landing/landing.html
@@ -19,8 +19,14 @@
                <img src="../public/image/logo/logo2.PNG" alt="">
             </div>
             <div class="cart">
-                <i class="fas fa-user-alt"></i>
-                <i class="fas fa-cart-arrow-down"></i>
+                <div>
+                    <i class="fas fa-user-alt paddin"></i>
+                    <a href="../login/login.html" class="cart-div">Login</a>
+                </div>
+                <div>
+                    <i class="fas fa-cart-arrow-down paddin"></i>
+                    <span class="cart-div">Cart</span>
+                </div>
             </div>
         </div>
         <!-- section 1-->
