adding authentication and dynamically adding to the product list

--- a/UI/landing/landing.html
+++ b/UI/landing/landing.html
@@ -8,24 +8,31 @@
     <link rel="stylesheet" href="landing.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
-<body>
+<body onload="homePage()">
     <div class="container">
         <!-- header -->
         <div class="head">
             <div class="search">
-                <i class="fas fa-bars"></i>
+                <i class="fas fa-bars menu"></i>
+                <div>
+                    <h2 id="loggedInName"></h2>
+                </div>
             </div>
             <div class="logo">
                <img src="../public/image/logo/logo2.PNG" alt="">
             </div>
             <div class="cart">
-                <div>
+                <div id="user-login">
                     <i class="fas fa-user-alt paddin"></i>
-                    <a href="../login/login.html" class="cart-div">Login</a>
+                    <a href="../login/login.html" class="cart-div"><p>Login</p></a>
+                </div>
+                <div id="user-logout" class="user-logout">
+                    <i class="fas fa-user-alt paddin"></i>
+                    <p>Logout</p>
                 </div>
                 <div>
                     <i class="fas fa-cart-arrow-down paddin"></i>
-                    <span class="cart-div">Cart</span>
+                    <span class="cart-div"><p>Cart</p></span>
                 </div>
             </div>
         </div>
@@ -33,7 +40,7 @@
         <div class="main_section">
             <div class="carousel">
                 <div class="main_img">
-                    <img src="../public/image/carousel/landing6.jpg" alt="image here">
+                    <img src="https://i.ebayimg.com/images/g/OEgAAOSwJj9c1SxO/s-l960.webp" alt="image here">
                 </div>
                 <div class="cat_section">
                     <div class="cat_icons">
@@ -111,6 +118,19 @@
                 </div>
             </div>
         </div>
+
+        <!-- products -->
+        <div class="product-cont">
+            <div class="product-category">
+                <span class="most-view">Most View Product</span>
+            </div>
+            <div id="product">
+                <!-- all products will be display here -->
+            </div>
+            <div class="moreView">
+                <a href="../productsDisplay/product.html" class="moreViewButton button"> View More </a>
+            </div>
+        </div>
         <!-- footer -->
         <div class="foot">
             <div class="foot_content">
@@ -141,5 +161,6 @@
             </div>
         </div>
     </div>
+    <script src="./landing.js"></script>
 </body>
 </html>
