--- a/UI/landing/landing.html
+++ b/UI/landing/landing.html
@@ -12,14 +12,17 @@
     <div class="container">
         <!-- header -->
         <div class="head">
-            <div class="search">
+            <!-- <div class="search">
                 <i class="fas fa-bars menu"></i>
                 <div>
                     <h2 id="loggedInName"></h2>
                 </div>
-            </div>
+            </div> -->
             <div class="logo">
                <img src="../public/image/logo/logo2.PNG" alt="">
+            </div>
+            <div class="searchDiv">
+                <input type="text" placeholder="search for product">
             </div>
             <div class="cart">
                 <div id="user-login">
