--- a/UI/productsDisplay/product.html
+++ b/UI/productsDisplay/product.html
@@ -11,15 +11,19 @@
 <body onload="homePage('allProduct')">
     <div class="container">
         <!-- header -->
+        
         <div class="head">
-            <div class="search">
+            <!-- <div class="search">
                 <i class="fas fa-bars menu"></i>
                 <div>
                     <h2 id="loggedInName"></h2>
                 </div>
-            </div>
+            </div> -->
             <div class="logo">
-               <img src="../public/image/logo/logo2.PNG" alt="">
+                <img src="../public/image/logo/logo2.PNG" alt="">
+            </div>
+            <div class="searchDiv">
+                <input type="text" placeholder="search for product">
             </div>
             <div class="cart">
                 <div id="user-login">
@@ -41,7 +45,7 @@
         <div class="product-category">
             <span class="most-view">Most View Product</span>
             <select name="category" onchange="changeCategory(this)">
-                <option value="Products"> All Product </option>
+                <option value="allProduct"> All Product </option>
                 <option value="electronics"> Electronics </option>
                 <option value="dress"> Dress </option>
                 <option value="cars"> Cars </option>
