--- a/UI/productsDisplay/product.html
+++ b/UI/productsDisplay/product.html
@@ -20,7 +20,9 @@
                 </div>
             </div> -->
             <div class="logo">
-                <img src="../public/image/logo/logo2.PNG" alt="">
+                <a href="../landing/landing.html">
+                    <img src="../public/image/logo/logo2.PNG" alt="">
+                </a>
             </div>
             <div class="searchDiv">
                 <input type="text" placeholder="search for product">
