--- a/UI/signUp/signUp.html
+++ b/UI/signUp/signUp.html
@@ -16,7 +16,9 @@
                 <i class="fas fa-bars"></i>
             </div>
             <div class="logo">
-               <img src="../public/image/logo/logo2.PNG" alt="">
+                <a href="../landing/landing.html">
+                    <img class="signInLogo" src="../public/image/logo/logo2.PNG" alt="">
+                </a>
             </div>
             <div class="cart">
                 <i class="fas fa-user-alt"></i>
