--- a/UI/login/login.html
+++ b/UI/login/login.html
@@ -17,7 +17,9 @@
                 <i class="fas fa-bars"></i>
             </div>
             <div class="logo">
-               <img src="../public/image/logo/logo2.PNG" alt="">
+                <a href="../landing/landing.html">
+                    <img src="../public/image/logo/logo2.PNG" alt="">
+                </a>
             </div>
             <div class="cart">
                 <i class="fas fa-user-alt"></i>
